force-app/main/default/objects/Window__c/fields/Calculated_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Square_Feet__c</fullName>
    <description
  >Calculates area of window and converts to square feet</description>
    <formula>(Length_in__c  *  Width_in__c )/144</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Square Feet</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>