force-app/main/default/objects/Window__c/fields/House__c.field-meta.xml
<CustomField>
    <fullName>House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link a window with the house it is a part of</description>
    <label>House</label>
    <referenceTo>House__c</referenceTo>
    <relationshipLabel>Windows</relationshipLabel>
    <relationshipName>Windows</relationshipName>
    <type>Lookup</type>
</CustomField>