force-app/main/default/objects/Window__c/fields/Length_in__c.field-meta.xml
<CustomField>
    <fullName>Length_in__c</fullName>
    <description>Length of window in inches</description>
    <inlineHelpText>Length of window in inches</inlineHelpText>
    <label>Length(in)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>