force-app/main/default/objects/Window__c/fields/Width_in__c.field-meta.xml
<CustomField>
    <fullName>Width_in__c</fullName>
    <description>Width of window in inches</description>
    <inlineHelpText>Width of window in inches</inlineHelpText>
    <label>Width(in)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>